@@ -1,3 +1,10 @@
+2001-11-27  Benjamin Kosnik  <bkoz@redhat.com>
+
+	* include/bits/locale_facets.tcc: Formatting tweaks.
+
+	* testsuite/23_containers/map_operators.cc: Don't xfail.
+	* testsuite/23_containers/set_operators.cc: Same.
+
 2001-11-27  Loren J. Rittle  <ljrittle@acm.org>
 	    Paolo Carlini  <pcarlini@unitus.it>
 
